[gd_scene load_steps=13 format=2]

[ext_resource path="res://scripts/Levels/Level3.gd" type="Script" id=1]
[ext_resource path="res://shaders/wind.shader" type="Shader" id=2]
[ext_resource path="res://assets/sprites/misc/black_background.png" type="Texture" id=3]
[ext_resource path="res://scenes/Creatures/GlitchCreature.tscn" type="PackedScene" id=4]
[ext_resource path="res://player/Player.tscn" type="PackedScene" id=5]

[sub_resource type="ShaderMaterial" id=1]
shader = ExtResource( 2 )
shader_param/OCTAVES = 6
shader_param/color = Vector3( 1, 0.5, 0.9 )

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 138.825, 1266.27 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 503.329, 97.7491 )

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 24.1436, 339.633 )

[sub_resource type="Animation" id=2]
resource_name = "creature_flying"
length = 20.0
tracks/0/type = "value"
tracks/0/path = NodePath("GlitchCreature:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 20 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 2420.6, 1332.9 ), Vector2( 20000, 1332.9 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("GlitchCreature:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 20 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 0.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("GlitchCreature:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 20 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1, 1 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "Camera"
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath("Player/Camera2D:zoom")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 2, 2 ), Vector2( 6, 6 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Player/Camera2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 48.1375, -62.7548 ), Vector2( 978.137, -452.755 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Player/Camera2D:rotation_degrees")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 0.0 ]
}

[sub_resource type="Animation" id=5]
resource_name = "weather"
length = 20.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("CanvasModulate:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 5, 10 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 0, 0, 0, 1 ), Color( 0, 0, 0, 1 ) ]
}

[node name="Level3" type="Node2D"]
script = ExtResource( 1 )
__meta__ = {
"_edit_horizontal_guides_": [  ]
}

[node name="background" type="Sprite" parent="."]
material = SubResource( 1 )
position = Vector2( 76871.6, 1024.36 )
scale = Vector2( 150.02, 20 )
texture = ExtResource( 3 )
__meta__ = {
"_edit_lock_": true
}

[node name="Obstacles" type="Node2D" parent="."]
editor/display_folded = true

[node name="StaticBody2D" type="StaticBody2D" parent="Obstacles"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Obstacles/StaticBody2D"]
position = Vector2( 3077.83, -3192.17 )
shape = SubResource( 6 )

[node name="GlitchCreature" parent="." instance=ExtResource( 4 )]
editor/display_folded = true
position = Vector2( 2420.6, 1332.9 )

[node name="AnimatedSprite" parent="GlitchCreature" index="0"]
position = Vector2( 260, 0 )
frame = 1

[node name="CollisionShape2D" parent="GlitchCreature" index="1"]
position = Vector2( 230, 180 )

[node name="RideCreature" type="Area2D" parent="GlitchCreature"]
editor/display_folded = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="GlitchCreature/RideCreature"]
position = Vector2( 260, -20 )
shape = SubResource( 3 )

[node name="StaticBody2D" type="StaticBody2D" parent="GlitchCreature"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="GlitchCreature/StaticBody2D"]
position = Vector2( -160, 0 )
shape = SubResource( 7 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="GlitchCreature/StaticBody2D"]
position = Vector2( 730, 0 )
shape = SubResource( 7 )

[node name="Creature" type="AnimationPlayer" parent="."]
anims/creature_flying = SubResource( 2 )

[node name="CameraEffects" type="AnimationPlayer" parent="."]
anims/Camera = SubResource( 4 )

[node name="Effects" type="AnimationPlayer" parent="."]
anims/weather = SubResource( 5 )

[node name="CanvasModulate" type="CanvasModulate" parent="."]
color = Color( 0.333333, 0.333333, 0.333333, 1 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Player" parent="." instance=ExtResource( 5 )]
position = Vector2( 2905.94, -4276.82 )

[node name="StateMachine" parent="Player" index="2"]
START_STATE = NodePath("Diving")

[node name="Camera2D" type="Camera2D" parent="Player"]
position = Vector2( 48.1375, -62.7548 )
current = true
zoom = Vector2( 2, 2 )
[connection signal="body_entered" from="GlitchCreature/RideCreature" to="." method="_on_RideCreature_body_entered"]
[connection signal="body_exited" from="GlitchCreature/RideCreature" to="." method="_on_RideCreature_body_exited"]

[editable path="GlitchCreature"]

[editable path="Player"]
